# sr25519

./: .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RELEASING.md  SECURITY.md  checksum-Elixir.Sr25519.Native.exs  mix.exs
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: verify_checksums.exs
.github/workflows/: audit.yml  ci.yml  codeql.yml  publish.yml  release-verify.yml  release.yml  scorecard.yml
bench/: verify_bench.exs
docs/: CONFORMANCE.md
lib/: sr25519.ex
lib/mix/tasks/: conformance.ex
lib/sr25519/: native.ex  substrate.ex
native/sr25519_nif/: Cargo.toml  Cross.toml  deny.toml
native/sr25519_nif/.cargo/: config.toml
native/sr25519_nif/src/: lib.rs
test/: concurrency_test.exs  docs_consistency_test.exs  doctest_test.exs  nif_safety_test.exs  property_test.exs  taxonomy_test.exs  test_helper.exs
test/conformance/: ladder_test.exs  packaging_test.exs
test/support/: conformance_formatter.ex  vectors.ex
test/vectors/: lifted_scure_published.json  polkadot_js.json  rust.json  scure.json  substrate_interface.json
vectors/: corpus_spec.json
vectors/node/: gen.mjs  gen_polkadotjs.mjs  package-lock.json  package.json  spec_common.mjs
vectors/python/: gen.py  requirements.txt
vectors/rust_oracle/: Cargo.toml
vectors/rust_oracle/src/: main.rs
