[package]
name = "rust_oracle"
version = "0.1.0"
edition = "2021"
publish = false

# Dev-only vector generator. Uses the SAME schnorrkel crate the NIF wraps, with
# full (signing) features. Proves the wrapper == the crate (L1) and covers the
# custom-context verify_raw/4 path that the substrate-baked oracles cannot.

[dependencies]
schnorrkel = "=0.11.5"
serde_json = "1"
hex = "0.4"
